feat: added /recipe/all endpoint
